# philosophy-mcp

./: LICENSE  README.md  pyproject.toml
philosophy_mcp/: __init__.py  remote.py  server.py
tests/: test_remote.py  test_server.py
